# yoloplan

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/src/routes/: mod.rs
api/src/routes/index/: mod.rs
api/src/routes/trip/: mod.rs  models.rs
common/: Cargo.toml
common/src/: lib.rs  metadata.rs  simple_types.rs  value.rs
extractor/: Cargo.toml
extractor/resources/tests/: bachtrack  bachtrack_listing  bachtrack_listing2
extractor/src/: main.rs
extractor/src/bachtrack/: extractor.rs  mod.rs
extractor/src/datasources/: mod.rs
extractor/src/datasources/bachtrack/: mod.rs
extractor/src/datasources/bachtrack/discovery/: datasource.rs  mod.rs  tests.rs
extractor/src/datasources/bachtrack/listing/: datasource.rs  mod.rs  tests.rs
extractor/src/datasources/bachtrack_discovery/: datasource.rs  mod.rs
extractor/src/model/: datasource.rs  errors.rs  extract.rs  extractor.rs  http_client.rs  mod.rs  music_event.rs
macros/: Cargo.toml
macros/src/: expander.rs  lib.rs  one_or_many.rs  schema.rs  utility.rs
macros2/: Cargo.toml
macros2/src/: lib.rs  schema.rs
normalizer/: .env  Cargo.toml  schema.json
normalizer/src/: main.rs
normalizer/src/dal/: mod.rs
normalizer/src/dal/arangodb/: arangodb.rs  mod.rs
normalizer/src/dal/neo4j/: error.rs  mod.rs  neo4j.rs  serializer.rs
normalizer/src/model/: errors.rs  mod.rs  normalizer.rs  serializer_type.rs
schema/: Cargo.toml
schema/src/: expander.rs  lib.rs  one_or_many.rs  schema.rs  utility.rs
src/: main.rs
testing/: Cargo.toml
testing/src/: main.rs
