[package]
name = "event-engine"
version = "0.1.0"
authors = ["DanielGazit <danieligazit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
scraper = "0.12.0"
tokio = { version = "0.2.21", features = ["macros"] }
