[package]
name = "extractor"
version = "0.1.0"
authors = ["DanielGazit <danieligazit@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.10.8"
scraper = "0.12.0"
async-trait = "0.1.41"
tokio = { version = "0.2.21", features = ["macros"] }
nats = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.9", features = ["serde"]}
futures = "0.3"
tokio-test = "0.2.1"