[package]
name = "normalizer"
version = "0.1.0"
authors = ["DanielGazit <danieligazit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["macros"] }
nats = "0.8.0"
serde = { version = "1.0", features = ["derive"] }