[package]
name = "normalizer"
version = "0.1.0"
authors = ["DanielGazit <danieligazit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemafy_core = "0.5.1"
schema = { path = "../schema" }
common = { path = "../common" }
bolt-client = { version = "0.8.0", features = ["tokio-stream"]}
bolt-proto = "0.9.1"
tokio-util = { version = "0.3.1", features = ["compat"] }
tokio = { version = "0.2.22", features = ["macros", "dns", "tcp"]}
dotenv = "0.15.0"
rincon_core = "0.1"
rincon_connector = "0.1"
rincon_session = "0.1"
tokio-core = "0.1"
anyhow = "1.0.33"