[package]
name = "testing"
version = "0.1.0"
authors = ["DanielGazit <danieligazit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bolt-client-macros]
version = "0.2.0"

[dependencies.bolt-proto]
version = "0.9.0"

[dependencies.bytes]
version = "0.5.6"

[dependencies.futures-util]
default-features = false
features = ["io"]
version = "0.3.5"

[dependencies.pin-project]
optional = true
version = "0.4.23"

[dependencies.thiserror]
version = "1.0.20"

[dependencies.tokio]
features = ["io-util", "tcp"]
optional = true
version = "0.2.22"

[dependencies.tokio-rustls]
optional = true
version = "0.14.1"

[dependencies.webpki-roots]
optional = true
version = "0.20.0"
[dev-dependencies.chrono]
default-features = false
features = ["std"]
version = "0.4.15"

[dev-dependencies.tokio]
features = ["dns", "macros", "rt-threaded"]
version = "0.2.22"

[dev-dependencies.tokio-util]
features = ["compat"]
version = "0.3.1"

[features]
tokio-stream = ["pin-project", "tokio", "tokio-rustls", "webpki-roots"]
